# XarconleReader

./: BetterButton.qml  CMakeLists.txt  Defs.h  FileProcessor.cpp  FileProcessor.h  FileRow.qml  HorizontalBar.cpp  HorizontalBar.h  HorizontalHistogram.cpp  HorizontalHistogram.h  LengthRow.qml  OpenStartRow.qml  PauseCancleRow.qml  README.md  ReaderBackend.cpp  ReaderBackend.h  ToolTip.cpp  ToolTip.h  WelcomeText.qml  main.cpp  main.qml
test/: a.txt  c.txt
